--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Harinadh Appidi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,10 +81,15 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href=books.html">Books</a></li>
+                    <li><a href="travel.html">Travel</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
+                    <li><a href="substack.html">Substack</a></li>
+                    <li><a href="twitter.html">Twitter</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -93,27 +98,17 @@
     <section id="showcase">
         <div class="container">
             <h1>Welcome to My Website</h1>
-            <p>Hi There, My name is Harinadh(Hari). I am a software engineer in bay area. </p>
+            <p>Hi there, I am Hari, Another software enigineer in the bay area. </p>
         </div>
     </section>
 
     <div class="container content">
-        <h2>About Me</h2>
-        <p>Write a short paragraph about yourself, your interests, and your professional background.</p>
-
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1</a> - Brief description of Project 1.</li>
-            <li><a href="#">Project 2</a> - Brief description of Project 2.</li>
-            <li><a href="#">Project 3</a> - Brief description of Project 3.</li>
-        </ul>
-
-        <h2>Contact</h2>
-        <p>You can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <h2>Introduction</h2>
+        <p>I like to read almost anything but mostly reading philosohpy, programming languages and making intelligent investments. I also like to travel and explore new places, museums, art and nature.</p>
     </div>
 
     <footer>
-        <p>Copyright &copy; 2024 Your Name</p>
+        <p>Copyright &copy; 2024 Harinadh Appidi</p>
     </footer>
 </body>
 </html>
