--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section id="showcase">
         <div class="container">
             <h1>Welcome to My Website</h1>
-            <p>Hi there, I am Hari, Another software enigineer in the bay area. </p>
+            <p>Hi there, I am Hari, Another software engineer in the bay area. </p>
         </div>
     </section>
 
